@@ -1,3 +1,11 @@
+2008-06-13  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/posix/getaddrinfo.c: Move _res_hconf_init call to a
+	better place so it is not called when nscd is used.
+
+	* nscd/connections.c: Also recognize and handle changes to the
+	resolver configuration file.
+
 2008-06-12  Ulrich Drepper  <drepper@redhat.com>
 
 	* time/strftime.c: Pass reference to tzset_called around to handle
